Fix responsiveness on small screens

--- a/responsive-web-challenge/edie-homepage/homepage.css
+++ b/responsive-web-challenge/edie-homepage/homepage.css
@@ -501,7 +501,7 @@ form.contact-us div button {
 .testimonial {
     --flow-space: 3em;
     margin: 0 8rem 10rem;
-    width: 65%;
+    width: 75%;
 }
 
 .testimonial q {
